# wasm-bindgen_js-bindgen

./: .gitignore  README.md  TODO.md  cached-archives.md
.github/workflows/: build.yaml
basic-example/src/: lib.rs
cargo-shim/: runner.cmd
client/: Cargo.toml
client/.cargo/: config.toml  linker  linker.cmd
client/bootstrap/: Cargo.toml
client/bootstrap/src/: lib.rs
client/examples/: basic.html  basic.mjs  basic.rs  basic.wat
client/js-bindgen/: Cargo.toml
client/js-bindgen/src/: bootstrap.rs  cache.rs  lib.rs
client/js-bindgen/src/test/: mod.rs
client/js-bindgen/tests/: ui.rs
client/js-bindgen/tests/ui/: string_arguments.rs  string_arguments.stderr
client/js-sys/: Cargo.toml  build.rs
client/js-sys-macro/src/: lib.rs
client/js-sys-macro/src/test/: mod.rs
client/js-sys/src/: array.rs  externref.32.wasm  externref.32.wat  externref.64.wasm  externref.64.wat  externref.rs  hazard.rs  lib.rs  macro.rs  numeric.rs  panic.rs  string.rs  util.rs
client/shared/: Cargo.toml
client/shared/src/: lib.rs
client/web-sys/: Cargo.toml
client/web-sys/src/: console.log.32.wasm  console.log.32.wat  console.log.64.wasm  console.log.64.wat  lib.rs
examples/: Cargo.toml  basic.wat
examples/.cargo/: config.toml
host/: Cargo.toml
host/js-bindgen/: Cargo.toml
host/js-sys-macro/: Cargo.toml
host/js-sys-macro/src/: lib.rs  test.rs
host/js-sys-macro/src/tests/: function.rs  mod.rs
host/ld/: Cargo.toml
host/ld-lib/: Cargo.toml
host/linker/: Cargo.toml
host/macro-shared/: Cargo.toml
linker-shim/: README.md  linker  linker.cmd
(+19 files in other folders)
