[workspace]
members = ["js-bindgen", "js-sys", "js-sys-macro", "shared", "web-sys"]
resolver = "2"

[package]
edition = "2021"
name = "examples"

[dev-dependencies]
mini-alloc = "1"
web-sys = { path = "web-sys" }

[[example]]
crate-type = ["cdylib"]
name = "basic"

[workspace.lints.clippy]
tabs_in_doc_comments = "allow"
