[package]
edition = { workspace = true }
name = "js-sys-macro"
rust-version = { workspace = true }

[lib]
proc-macro = true

[dependencies]
js-bindgen-shared = { workspace = true }

[dev-dependencies]
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
similar-asserts = { workspace = true }
syn = { workspace = true }
